apps/architecture-portal/versioned_docs/version-1.0.46.0/assembly/lmdj.mdx
---
title: LMDJ Product Assembly
area: assembly
status: implemented
owners: [product, core, release]
source_paths: [products/lmdj, products/lmdj/assembly.lock.json]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 当前组合

当前 Product Build 以上方从 active manifests 生成的 Build Identity 为准；各组件页面的身份也从同一份 manifest/Assembly Lock 事实生成，不以以下历史分配记录替代当前版本。

## 历史分配记录

以下描述各次分配当时的变化，不声明当前组件版本或发布状态。

Product Build `1.0.45.0` 曾在 Build 44 之上装配 Stage 11 的 Sound Set 试听字节通路。Contract 侧无变化：试听不持久化任何东西，也不跨新的进程边界，`lmdj.soundset.v1` 保持 `1.1.0`，active Contract 仍是十个。Core Module 侧 Audio Runtime 升到 `3.1.0`（引擎新增保留的双槽 audition Bank 池、`audition_start`/`audition_stop` 控制种类与哨兵身份，纯追加，MINOR）、Application Facade 升到 `3.2.0`（新增交回已重采样 PCM 的类型化试听方法，纯追加，MINOR）、Web Runtime Platform 升到 `4.1.0`（追加 `soundset.audition.stop` 操作面，MINOR）；Foundation `0.4.0`、Authoring Domain `3.0.0`、Project I/O `3.0.0`、Project Cooker `1.1.0` 与 Provider SDK `1.1.4` 无源码改动。Host 侧 CLI、MCP 与 Native Host 升到 `3.2.0`，Formal Web Runtime Host 与 Creator Web 升到 `4.1.0`——其中只有 Creator Web 有源码改动（两个试听控件与一个停止控件），其余四个是依赖 pin 跟随，沿用 Build 44 的先例。两个本地 Proof Provider `1.0.5`、Provider policy、Capability 身份、Private Web 协议版本 `1` 与两份分发清单的资产计数均不变。
Product Build `1.0.44.0` 曾在 Build 43 的 `lmdj.project.v4` Contract cut 之上装配 Stage 11 的 Sound Set 能力。Contract 侧新增两个：`lmdj.soundset.v1 · 1.1.0`（Set 清单，1.1.0 起携带 `demo` Artifact）与 `lmdj.soundset-catalog.v1 · 1.0.0`（Catalog 索引）。portable bundle 由 `lmdj.project-bundle.v1 · 1.1.0` 升到 `1.2.0`：`project_contract` 枚举补齐 `lmdj.project.v4`，这是向后兼容的追加，也是必需的——本 Build 写出的每一个 Project 都是 v4，在此之前它们全都无法打包为 Bundle。`lmdj.project.v4 · 4.1.0` 仍是唯一当前写入真相 Contract；`lmdj.project.v3 · 3.0.0` 留在 active Contract 集合，但与 v1/v2 一样是只读迁移输入。`lmdj.error.v1 · 1.1.0`、`lmdj.capability.v2 · 2.0.0`、`lmdj.assembly.v2 · 2.0.0`、`lmdj.module.v1 · 1.0.0` 与 `lmdj.product-version.v1 · 1.0.0` 身份不变。Core Module 侧 Foundation 升到 `0.4.0`（新增公开 Sound Set 清单 header，MINOR）、Authoring Domain 升到 `3.0.0`（`AssetLineage` 的 source/derivation 成为 variant，`create_project` 直接产出 v4，MAJOR）、Project I/O 升到 `3.0.0`（无条件写出 v4 的持久化语义，MAJOR）、Application Facade 升到 `3.1.0`（纯追加的 Sound Set 操作与 `ApplicationConfig` 末尾成员，MINOR）、Web Runtime Platform 升到 `4.0.0`（manifest gate 由九项上限收紧为十三项，旧分发清单被拒，MAJOR）；Project Cooker `1.1.0`、Audio Runtime `3.0.0` 与 Provider SDK `1.1.4` 无源码改动，保持不变。Host 侧 CLI、MCP 与 Native Test Host 升到 `3.1.0`（各自追加 Sound Set 操作），Formal Web Runtime Host 与 Creator Web 升到 `4.0.0`（分发清单形状改变）。两个本地 Proof Provider 保持 `1.0.5`，`proof.candidate.v2 · 2.0.0`、Provider policy 与 Capability 身份不变，Private Web 协议版本仍为 `1`，Creator 六资产与 Diagnostic Host 十五资产分发清单不变。active Contract 集合因此由八个增加到十个。
Product Build `1.0.43.0` 曾在 Build 42 之上只推进 Contract 身份：`lmdj.project.v4` 由 `4.0.0` 升到 `4.1.0`，Contract ID 不变，`asset_lineage` 的 `source` 与 `derivation` 各自成为一组由常量 `kind` 判别、拒绝多余键的封闭 `oneOf`，新增 `soundset` source 与 `soundset_install` derivation 两个变体。Module、Host、Provider 与其余 Contract 身份在该 Build 全部不变。
Product Build `1.0.42.0` 曾在 Build 41 的双 Web Host 六资产交付上装配 Stage 10 的 Perform 演奏、录制与重放能力，首次引入 `lmdj.project.v4 · 4.0.0` 作为唯一当前写入真相 Contract，把 Authoring Domain 升至 `2.0.0`、Project I/O 升至 `2.0.0`、Project Cooker 升至 `1.1.0`、Audio Runtime 升至 `3.0.0`、Application Facade 升至 `3.0.0`、Web Runtime Platform 升至 `3.0.0`、五个 Host 同步升至 `3.0.0`，并在交付层新增 Platform 自有的 `perform_master_tap_worklet`（`assets/perform-master-tap.*.js`）：它只属于 Creator Web distribution contract 的六资产清单，Diagnostic Web Runtime Host 的十五资产清单明确不声明它。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，同样不新增公开产品能力。
Product Build `1.0.24.0` 曾分配八个 Core Module、五个 Host、两个本地 Proof Provider 与八个 active Contract。与前一构建相比，Provider SDK 升至 `1.1.2`，Application Facade 升至 `1.4.1`，Web Runtime Platform 升至 `0.3.1`，CLI/MCP/Native/Creator/Formal Web Runtime Host 与两个本地 Proof Provider 也同步完成 PATCH 级联；Contract 集合与 Provider policy 不变。

## 编译接线
`products/lmdj/src/compiled_assembly.cpp` 是产品专属 wiring；产品中立模块不知道 LMDJ 的具体组合。
Product CMake 只在 Emscripten `lmdj_web_runtime_host` target 存在时链接 compiled catalog object，并注入 Product Build、Platform version 以及 Creator/Diagnostic 两组精确 distribution-contract/Host identity。两个 Web Host 只声明 Web Runtime Platform 依赖；Platform 声明 Facade/Audio 依赖，Provider wiring 仍只属于 Product Assembly。
Platform CMake 从生成的 Runtime identity 注入全部九个资源上限，其中 `perform_recording_frames` 与 `perform_recording_queue_batches` 是 Stage 10 新增项；native manifest gate 逐个校验精确值，并要求声明 `compatible_hosts` 的 Creator 清单恰好携带一个 `perform_master_tap_worklet`、Diagnostic Host 清单为零，重复或游离条目按 inventory 缺陷 fail closed。Creator 打包工具在 Vite 产物中定位唯一的 Perform master-tap 模块、按内容哈希写入 `assets/perform-master-tap.<sha256>.js` 并只重写主包中那一处引用；零匹配或多匹配都拒绝打包。
## Policy
当前 Provider policy 仅允许 local/public/proof.execute 范围，与 Proof-only Provider 相符。
## 身份与完整性
Product Build、每个组件版本和 source hash 被锁定；门户事实生成会拒绝任何漂移。
`tests/build/version_test.py` 还直接校验真实仓库中两份生成的 Web Runtime identity（JSON 与 MJS）是否与 active manifests 一致；合成 fixture 只验证生成器行为，不能替代这项实际输入检查。漂移时先用 `python3 tools/web-runtime/generate_runtime_identity.py --repo-root .` 同步生成文件，再以 `--check` 验证；这不会分配新 Product Build，也不修改既有不可变快照。
Project Bundle Contract 仍是 portable transfer 边界；Project v4 是唯一当前写入真相 Contract，v3 与 v1/v2 只作为迁移输入被读取；同构建 Web transport 仍不是公开 Contract。Provider、Capability 与 model identity 未变化。
## 限制
Sequence recording 与 Perform 演奏录制、重放、resample 提交已实现；持久化 Asset 编辑、Crop Undo、生产 Provider、云能力、物理 Web 验收与 `beta`/`stable` 仍不能由当前 Assembly 成员关系或门户快照推导。Stage 10 尚无物理演奏验收，自动化通过只证明状态与边界。Build Identity 只证明当前页面绑定的 Product/Assembly 身份，不证明 tag、Release、immutable snapshot、部署或 Channel promotion 已发生。

本次 Assembly 集成 owned Provider 字节 ABI，协调 SDK、Proof Providers、Facade、
Web Runtime Platform 及依赖 Host 身份；上方身份来自 active manifests。对应 Product Build
保留 canary 文档快照；该集成不触发 Release 或运行环境部署。
